--- a/index.html
+++ b/index.html
@@ -236,8 +236,83 @@
         </div>
       </section>
       <section class="con5">
-        <div class="inner"></div>
+        <div class="inner">
+          <div class="mainTextBox">
+            <h2>Other Projects</h2>
+          </div>
+          <div class="listBox">
+            <li>
+              <h3>Deabang</h3>
+              <p>Undustry</p>
+              <p>2024</p>
+            </li>
+            <li>
+              <h3>The Dopda</h3>
+              <p>Platform</p>
+              <p>2024</p>
+            </li>
+            <li>
+              <h3>Musign</h3>
+              <p>Agency</p>
+              <p>2024</p>
+            </li>
+            <li>
+              <h3>Y.studio</h3>
+              <p>Agency</p>
+              <p>2024</p>
+            </li>
+            <li>
+              <h3>Crew a la mode</h3>
+              <p>Agency</p>
+              <p>2024</p>
+            </li>
+            <li>
+              <h3>Hanhwa</h3>
+              <p>Chemacal</p>
+              <p>2024</p>
+            </li>
+            <li>
+              <h3>Phomain</h3>
+              <p>Vientnames restaurant</p>
+              <p>2024</p>
+            </li>
+          </div>
+          <div class="imgBox box">
+            <img src="images/img0.jpg" alt="" />
+          </div>
+        </div>
       </section>
+      <footer>
+        <div class="inner">
+          <div class="box">
+            <div class="mainTextBox">
+              <h2>LET's Talk</h2>
+              <p><span>Contact, testimonial or simple hello...</span>
+                Leave us an audio message<br>and your contact details if you wish to be contacted.</p>
+            </div>
+            <div class="talkBtn">
+                <a href=""><span></span></a>
+            </div>
+            <div class="btnBox">
+              <a href="" class="btn">email</a>
+              <a href="" class="btn">call</a>
+              <a href="" class="btn">facebook</a>
+              <a href="" class="btn">Instagram</a>
+            </div>
+          </div>
+          <div class="copyright">
+            <p>Jyoung &#64; 2024</p>
+          </div>
+        </div>
+        <div class="logoWrap">
+          <span id="j"><img src="/images//logo/L_J.png" alt=""></span>
+          <span id="y"><img src="/images//logo/L_Y.png" alt=""></span>
+          <span id="o"><img src="/images//logo/L_O.png" alt=""></span>
+          <span id="u"><img src="/images//logo/L_U.png" alt=""></span>
+          <span id="n"><img src="/images//logo/L_N.png" alt=""></span>
+          <span id="g"><img src="/images//logo/L_G.png" alt=""></span>
+      </div>
+      </footer>
     </div>
     <script src="js/main.js" defer></script>
   </body>
