--- a/index.html
+++ b/index.html
@@ -288,6 +288,26 @@
           </div>
         </div>
       </section>
+      <section class="con6">
+        <h2>
+          <span>studio</span>
+          <span>studio</span>
+          <span>studio</span>
+          <span>studio</span>
+        </h2>
+        <div class="box">
+          <div class="mainTextBox">
+            <p class="mainText"><span>Come discover or book the studio</span><br/>
+              266 Avenue de Lardenne<br/>
+              31100 Toulouse
+              </p>
+          </div>
+          <div class="btnBox">
+            <a href="#" class="btn">See Google Maps</a>
+            <a href="#" class="btn">Make an appointment</a>
+          </div>
+        </div>
+      </section>
       <footer>
         <div class="inner">
           <div class="box">
