--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           <div class="subTextBox">
             <div class="subText">
               <p>At Qude, we don't have big or small projects. We only have people, creativity, sharing.</p>
-              <p>Each podcast should be a succession of moments of pleasure. Exceptional moments. Design, production, distribution. And listening.</p>
+              <p>Each podcast should be a successison of moments of pleasure. Exceptional moments. Design, production, distribution. And listening.</p>
             </div>
          </div>
         </div>
@@ -246,7 +246,7 @@
           <div class="mainTextBox">
             <h2>Other Projects</h2>
           </div>
-          <div class="listBox">
+          <ul class="listBox">
             <li>
               <h3>Deabang</h3>
               <p>Undustry</p>
